# litter-ish

./: .gitignore  Makefile  README.md  README_arm64.md  README_arm64_zh.md  main.c  meson.build  meson_options.txt  xX_main_Xx.h
.github/workflows/: ci.yml  litter-release.yml
app/: AboutViewController.m  App.xcconfig  AppARM64.xcconfig  AppDelegate.m  CurrentRoot.h  CurrentRoot.m  DebugServer.c  DebugServer.h  FontPickerViewController.m  GuestARM64.xcconfig  Info.plist  Linux.xcconfig  LinuxPTY.c  MountsViewController.h  MountsViewController.m  Project.xcconfig  Roots.m  Terminal.m  TerminalView.m  ThemeViewController.m  ThemesViewController.m  UserPreferences.m  download-root.sh  gen_apk_repositories.py  iOSFS.h  iOSFS.m  iSH.xcconfig  xcode-meson.sh  xcode-ninja.sh
app/Base.lproj/: About.storyboard
app/FileProvider/: Info.plist
app/RootfsPatch.bundle/files/lib/: wasm-polyfill.js
app/terminal/: JetBrainsMonoNerdFontMono-VENDORED.txt  ghostty-web-VENDORED.txt  ghostty-web.js  term.css  term.html  term.js
asbestos/: asbestos.c  gen.h  helpers.c  offsets.c
asbestos/guest-arm64/: gen.c
asbestos/guest-arm64/gadgets-aarch64/: control.S  entry.S  math.S  memory.S
docs/: ARM64_BACKEND_ZH.md  ARM64_GADGET_FUSION_PLAN.md  ARM64_PRODUCTION_BASELINE.md  ARM64_PRODUCTION_DEPLOYMENT.md  ARM64_SMOKE_ISSUES_AND_SYSCALL_COVERAGE.md  ARM64_WORKLOAD_SMOKE_TESTS.md  BENCHMARKSGAME_GCC_SMOKE.md  BENCHMARKSGAME_GO_SMOKE.md  BENCHMARKSGAME_GPP_SMOKE.md  BENCHMARKSGAME_HARNESS.md  BENCHMARKSGAME_JAVA_EQUIVALENT_SMOKE.md  BENCHMARKSGAME_LUA_SMOKE.md  BENCHMARKSGAME_MATRIX.md  BENCHMARKSGAME_NODE_SMOKE.md  BENCHMARKSGAME_PERL_SMOKE.md  BENCHMARKSGAME_PHP_SMOKE.md  BENCHMARKSGAME_PYTHON_SMOKE.md  BENCHMARKSGAME_RUBY_SMOKE.md  GO_GTE_PROGRESS.md  LINUX_BUILD_AND_HOST_ABI.md  ORIGINAL_ISH_README.md  RUNTIME_VALIDATION.md
docs/benchmark/: BENCHMARK_COMPAT.md  BENCHMARK_PERF.md  README.md
docs/legacy/: README.md  README_JP.md  README_KO.md  README_ZH.md
embed/: Cargo.toml  README.md  build-rootfs.sh  build-xcframework.sh  ffi.c  ffi.h  ish_embed.c  ish_embed.h  meson.build
embed/.cargo/: config.toml
embed/cross/: ios-device.txt  ios-sim-arm64.txt  ios-sim-x86_64.txt
embed/host/: Cargo.toml  build.rs
embed/host/src/: error.rs  instance.rs  lib.rs  session.rs
embed/host/tests/: acceptance.rs  smoke.rs
embed/protocol/: Cargo.toml
embed/protocol/src/: lib.rs
embed/supervisor/: Cargo.toml
embed/supervisor/.cargo/: config.toml
embed/supervisor/src/: main.rs  session.rs  spawn.rs
embed/tests/: link_ios.c  smoke_host.c
embed/tests/ios_app/: project.yml
embed/tests/ios_app/Sources/: App.swift  BridgingHeader.h
emu/: cpu.h  mmu.h  tlb.c  tlb.h
fs/: dev.c  devices.h  fake.c  fd.h  generic.c  net_route.c  net_route.h  path.c  poll.c  proc.c  proc.h  real.c  sock.c  sock.h
fs/proc/: entry.c  ish.c  net.c  root.c  sys.c
iSH.xcodeproj/: project.pbxproj
kernel/: BatteryStatus.h  BatteryStatus.m  UIDevice.h  UIDevice.m  calls.c  calls.h  elf.h  exec.c  exit.c  fork.c  fs.c  futex.c  hostinfo.h  hostinfo.m  init.c  init.h  ipc.c  log.c  memory.c  memory.h  misc.c  mmap.c  native_offload.c  ptrace.c  resource.c  rtc.c  signal.h  task.c  task.h  time.c  uname.c  vdso.c  vdso.h
kernel/arch/arm64/: calls.c
platform/: darwin.c  host_context_aarch64.h  linux.c  platform.h
tests/arm64/: ai-cli-runtime-coverage.sh  cli-corner-smoke.sh  cli-package-runtime-coverage.sh  internal-continue-fixtures.sh  node-bun-perf-table.sh  runtime-coverage.sh
tests/arm64/benchmarksgame/: generate-matrix.py  run-gcc-smoke.sh  run-go-smoke.sh  run-gpp-smoke.sh  run-java-equivalent-smoke.sh  run-lua-smoke.sh  run-node-smoke.sh  run-perl-smoke.sh  run-php-smoke.sh  run-python-smoke.sh  run-ruby-smoke.sh
tests/arm64/signals/: sigaltstack-thread.c
tools/: meson.build  ptraceomatic.c  vdso-clang-wrapper.sh
util/: sync.c
vdso/arm64/: check-cc-arm64.sh  meson.build
