option('log', type: 'string', value: '')
option('nolog', type: 'string', value: '')
option('log_handler', type: 'string', value: 'dprintf')

option('engine', type: 'combo', choices: ['asbestos', 'unicorn'], value: 'asbestos')
option('kernel', type: 'combo', choices: ['ish', 'linux'], value: 'ish')
option('kconfig', type: 'array', value: [])

option('vdso_c_args', type: 'string', value: '')

option('no_crlf', type: 'boolean', value: false)

# Compile the iOS-only kernel/{BatteryStatus,UIDevice,hostinfo}.m glue
# (UIKit + Foundation) and surface iPhone state through /proc/ish/*. Set
# automatically by embed/host/build.rs when targeting an iPhone* SDK.
option('apple_ui', type: 'boolean', value: false)
