[package]
name        = "ish-embed-protocol"
version     = "0.1.0"
edition     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
description = "Wire protocol shared between the iSH host crate and the in-iSH PID-1 supervisor."

[lib]
name = "ish_embed_protocol"

[dependencies]
serde    = { workspace = true }
postcard = { workspace = true }

[features]
default = []
# Lets the host crate (which has std anyway) pull in std-only conveniences.
std = ["postcard/use-std", "serde/std"]
